@@ -1,6 +1,6 @@
 apply plugin: "java"
 
-sourceCompatibility = 1.7
+sourceCompatibility = 1.8
 sourceSets.main.java.srcDirs = ["src/main"]
 sourceSets.main.resources.srcDirs = ["src/main"]
 
